--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <iframe id="fullscreen-iframe" src="https://example.com"></iframe>
+    <iframe id="fullscreen-iframe" src="http://geopolitica.minecraft.best:19132/"></iframe>
 </body>
 </html>
