--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="keywords" content="minecraft, map, dynamic, liveatlas" />
 	<meta name="description" content="Minecraft Dynamic Map" />
 
-    <title>Geopolitica Live Map</title>
+    <title>Geopolitica Map</title>
 
     <!-- Remove this if you are using the servers config below -->
     <script src="geopolitica.minecraft.best:19132/standalone/config.js"></script>
