--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="http://geopolitica.minecraft.best:19132/live-atlas/favicons/apple-touch-icon.png">
 
     <!-- LiveAtlas Configuration -->
-    <script src="http://geopolitica.minecraft.best:19132/standalone/config.js"></script>
+    <script src="./standalone/config.js"></script>
 
     <script>
         window.liveAtlasConfig = {
